fix: client search with double click
and tables set to non-focusable

--- a/src/main/java/views/workbudget/stages/ClientSearchingStage.form
+++ b/src/main/java/views/workbudget/stages/ClientSearchingStage.form
@@ -29,6 +29,7 @@
                   <doubleBuffered value="false"/>
                   <editingColumn value="-1"/>
                   <editingRow value="-1"/>
+                  <focusable value="false"/>
                 </properties>
               </component>
             </children>
